# computational-intelligence

./: .gitignore  README.md
exam/: RLAgent.py  main.py  pyproject.toml
exam/quarto/: objects.py
lab1/: README.md  pyproject.toml
lab1/lab1/: astar.py  greedy.py
lab2/: README.md  pyproject.toml
lab2/src/: set-cover-ga.ipynb
lab3/: README.md  evolution-strategy.md  minmax.md  pyproject.toml  rl.md
lab3/lab3/: evolving-nim.ipynb  nim_minmax.ipynb  nim_rl.ipynb  nim_sum.ipynb
