[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Simone Cosimo <simosx4@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
